// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно вернуть pageMeta, если не указан canonicle 1`] = `
Object {
  "canonical": "https://autoru_frontend.base_domain/catalog/cars/all/",
  "h1": "H1Text",
  "locale": "ru_RU",
  "pageDesc": "Description",
  "pageTitle": "Title",
  "pageUrl": "https://m.auto.ru/catalog/cars/all/?autoru_body_type=sedan",
  "seoImage": "https://m.auto.ru/catalog/cars/all/img.jpg",
  "seoKeywords": "Keywords",
  "seoShortText": "ShrTxt",
  "seoText": "Text",
  "seoTextFooter": "Footer",
  "seoTitle": "Title",
  "siteName": "Авто.ру",
  "subscriptionTitle": "Title",
  "type": "website",
}
`;

exports[`должен правильно вернуть pageMeta, если указан canonicle 1`] = `
Object {
  "canonical": "https://auto.ru/catalog/cars/all/",
  "h1": "H1Text",
  "locale": "ru_RU",
  "pageDesc": "Description",
  "pageTitle": "Title",
  "pageUrl": "https://m.auto.ru/catalog/cars/all/?autoru_body_type=sedan",
  "seoImage": "https://m.auto.ru/catalog/cars/all/img.jpg",
  "seoKeywords": "Keywords",
  "seoShortText": "ShrTxt",
  "seoText": "Text",
  "seoTextFooter": "Footer",
  "seoTitle": "Title",
  "siteName": "Авто.ру",
  "subscriptionTitle": "Title",
  "type": "website",
}
`;
